# manuscripts-optogenetics-compatible-red-geci

./: pyproject.toml  readme.md
notebooks/panels/: fig_02 library results.ipynb  fig_03 2p photobleaching.ipynb  fig_03 calcium titration, digitonin.ipynb  fig_03 photobleaching.ipynb  fig_03 spectra from purified protein.ipynb  fig_04 plotting cochr data.ipynb  fig_05 in vivo sensor comparison.ipynb
src/calcium_imaging_analysis/: __init__.py  analysis.py  fig.py  io.py  registration.py  viz.py
